# magnus-effect-visualiser

./: imgui.ini  project_info.md
magnus_visualizer/: .gitignore  CMakeLists.txt  README.md
magnus_visualizer/src/: ball.cpp  ball.h  camera.cpp  camera.h  controlpanel.cpp  controlpanel.h  input.cpp  input.h  main.cpp  renderer.cpp  renderer.h  simulation.cpp  simulation.h  trail.cpp  trail.h  ui.cpp  ui.h  vectors.cpp  vectors.h
